--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <title>Title</title>
-</head>
-<body>
-
-</body>
+  </head>
+  <body>
+    <h1>Home pages</h1>
+    <a href="Weather.html">Weather</a>
+    <a href ="Currency.html">Currency</a>
+  </body>
 </html>
