--- a/Weather.html
+++ b/Weather.html
@@ -7,8 +7,19 @@
 <body>
 <h1>Weather pages</h1>
 
-
-
+<h2>Weather for today is</h2>
+<div>
+    <span>temp</span>
+    <span id="tempEl">+25</span>
+</div>
+<div>
+    <span>humidity</span>
+    <span>45%</span>
+</div>
+<div>
+    <span>clouds</span>
+    <span>easy</span>
+</div>
 <script src="script.js"></script>
 </body>
 </html>
