--- a/Currency.html
+++ b/Currency.html
@@ -5,7 +5,22 @@
     <title>Title</title>
 </head>
 <body>
-<h1>Currency pages</h1>
+<div>
+    <span>Валюта1</span>
+    <span id = "ccyEl">22</span>
+</div>
+<div>
+    <span>Валюта2</span>
+    <span id = "base_ccyEl"></span>
+</div>
+<div>
+    <span>Покупка</span>
+    <span id = "buyEl"></span>
+</div>
+<div>
+    <span>Продать</span>
+    <span id = "saleEl"></span>
+</div>
 <script src = 'ScriptCurrency.js'></script>
 </body>
 </html>
