--- a/Weather.html
+++ b/Weather.html
@@ -1,25 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href = "style.css">
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        body{
+            background-image: url("https://wallpapers-fenix.eu/full/141216/192118231.jpg");
+        }
+    </style>
 </head>
 <body>
-<h1>Weather pages</h1>
+<h1 class="weather" style = "color:white;">Weather pages</h1>
 
-<h2>Weather for today is</h2>
-<div>
-    <span>temp</span>
-    <span id="tempEl">+25</span>
+<h3 style="color:#ffffff; font: 175% serif; ">Weather for today is</h3>
+
+<div style="color:white; font: 150% serif; ">
+    <span>name: </span>
+    <span id="nameEl">+25</span>
 </div>
-<div>
-    <span>humidity</span>
-    <span>45%</span>
+
+<div style="color:white; font: 150% serif; ">
+    <span>temp: </span>
+    <span id="tempEl">+45</span>
 </div>
-<div>
-    <span>clouds</span>
-    <span>easy</span>
+
+<div style="color:white; font: 150% serif; ">
+    <span>humidity: </span>
+    <span id="humEl">+25</span>
 </div>
+
+<div style="color:white; font: 150% serif; ">
+    <span>timezone: </span>
+    <span id="timeEl">6000</span>
+</div>
+
 <script src="script.js"></script>
 </body>
 </html>
