--- a/Weather.html
+++ b/Weather.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href = "style.css">
+    <link rel="stylesheet" href = "style.css">
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
@@ -11,30 +11,40 @@
     </style>
 </head>
 <body>
-<h1 class="weather" style = "color:white;">Weather pages</h1>
+<h1 class="weather"> Weather pages </h1>
 
-<h3 style="color:#ffffff; font: 175% serif; ">Weather for today is</h3>
+<h3 class="weatherTwo"> Weather for today is ... </h3>
 
-<div style="color:white; font: 150% serif; ">
+<div class ="NameCity">
     <span>name: </span>
     <span id="nameEl">+25</span>
 </div>
 
-<div style="color:white; font: 150% serif; ">
+<button onclick="toggleDiv()">Change</button>
+
+<div class="temp">
     <span>temp: </span>
+<!--    <button onclick="Celsius" id="tempEl"></button>-->
     <span id="tempEl">+45</span>
 </div>
 
-<div style="color:white; font: 150% serif; ">
+
+<div class="tempo">
+    <span>temp: </span>
+    <!--    <button onclick="Celsius" id="tempEl"></button>-->
+    <span id="tempoEl">+45</span>
+</div>
+
+<div class="hum">
     <span>humidity: </span>
     <span id="humEl">+25</span>
 </div>
 
-<div style="color:white; font: 150% serif; ">
+<div class="time">
     <span>timezone: </span>
     <span id="timeEl">6000</span>
 </div>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
